# vroom-forecast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml  main.py  mise.toml  mkdocs.yml  mlflow.db  mprocs.yaml  promote.py  pyproject.toml  ruff.toml  train.py  ty.toml
.github/prompts/: vroom-forecast.prompt.md
.github/workflows/: cd-docs.yml  ci.yml
.opencode/skills/airflow/: SKILL.md
.opencode/skills/docs/: SKILL.md
.opencode/skills/exploration/: SKILL.md
.opencode/skills/features/: SKILL.md
.opencode/skills/local-dev/: SKILL.md
.opencode/skills/promotion/: SKILL.md
.opencode/skills/run-pipeline/: SKILL.md
.opencode/skills/serving/: SKILL.md
.opencode/skills/training/: SKILL.md
.opencode/skills/turo-context/: SKILL.md
.opencode/skills/ui/: SKILL.md
.opencode/skills/vroom-forecast/: SKILL.md
airflow/: AGENTS.md  Dockerfile  README.md
airflow/dags/: vroom_forecast_materialize.py  vroom_forecast_pipeline.py  vroom_forecast_promotion.py  vroom_forecast_training.py
bruno/: bruno.json
bruno/benchmark/: benchmark-raw.bru  benchmark-store.bru
bruno/health/: health.bru  model-info.bru  reload.bru
bruno/pipelines/: dag-run-status.bru  trigger-materialize.bru  trigger-train.bru
bruno/prediction/: predict-batch.bru  predict-by-id.bru  predict.bru
bruno/stores/: store-info.bru
bruno/vehicles/: all-features.bru  delete-vehicle.bru  list-vehicles.bru  save-vehicle.bru  vehicle-features.bru
data/: reservations.csv
docs/: airflow.md  api.md  exploration.md  openapi.json  promotion.md  serving.md  ui.md
docs/assets/: extra.css
exploration/: AGENTS.md  README.md  exploration.ipynb  exploration.py  pyproject.toml
features/: AGENTS.md  README.md  __main__.py  pipeline.py  pyproject.toml  seed.py  worker.py
features/feature_repo/: definitions.py  feature_store.yaml
features/tests/: test_features.py
promotion/: AGENTS.md  README.md  __main__.py  promote.py  pyproject.toml
promotion/tests/: test_promote.py
serving/: AGENTS.md  Dockerfile  README.md  __main__.py  app.py  config.py  features.py  model.py  pyproject.toml  schemas.py  ty.toml  vehicles.py
serving/tests/: test_serving.py
training/: AGENTS.md  README.md  __main__.py  pyproject.toml  train.py  ty.toml
training/tests/: test_train.py
ui/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: error-boundary.tsx
ui/src/lib/: api.ts
