[project]
name = "vroom-forecast"
version = "0.1.0"
description = "ML pipeline to predict vehicle reservation counts — monorepo root"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.2",
    "ruff>=0.15.9",
    "ty>=0.0.18",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"exploration/*" = ["E402", "B905"]  # notebook-style: late imports, zip without strict

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "exploration/",   # notebook-style code, not production
    "airflow/dags/",  # Airflow deps not in local venv
]
