[project]
name = "vroom-forecast-exploration"
version = "0.1.0"
description = "EDA notebook for vroom-forecast"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "mlflow>=2.21",
    "numpy>=2.2",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "ipykernel>=7.2",
    "jupytext>=1.19",
    "notebook>=7.5",
]
