[project]
name = "features"
version = "0.1.0"
description = "Feature store definitions and materialization pipeline for vroom-forecast"
requires-python = ">=3.12"
dependencies = [
    "feast[redis]>=0.61",
    "pandas>=2.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
