[project]
name = "serving"
version = "0.2.0"
description = "Ray Serve prediction service for vroom-forecast"
requires-python = ">=3.12"
dependencies = [
    "ray[serve]>=2.44",
    "fastapi>=0.115",
    "pydantic-settings>=2.7",
    "mlflow>=2.21",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=2.2",
    "feast[redis]>=0.61",
    "redis>=4.2,<5",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.28"]

[tool.pytest.ini_options]
pythonpath = [".."]
