[project]
name = "training"
version = "0.1.0"
description = "ML training pipeline for vroom-forecast"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "mlflow>=2.21",
    "pyarrow>=18.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
pythonpath = ["."]
